# versions/v1/src/routes/project.js
@@ -4,5 +4,6 @@ import ProjectController from '../controllers/project';
 const projectRouter = new KoaRouter();
 
 projectRouter.get('/projects', ProjectController.getProject);
+projectRouter.get('/projects/history', ProjectController.getHistory);
 
 export default projectRouter;
